# SVCE-Workshop-AI-Agents-Participants

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  agent_factory.py  agent_types.py  base_agent.py  config.py  llm_models.py  registry.py  state.py
app/agents/explainer_agent/: __init__.py  explainer_agent.py
app/agents/learner_agent/: __init__.py  learner_agent.py
app/agents/orchestrator_agent/: __init__.py  orchestrator_agent.py
app/config/: __init__.py  app_config.py
app/models/: __init__.py  models.py  response_models.py
app/nodes/: __init__.py  orchestrator_node.py
app/tools/: exam_helper_tools.py  firecrawl_tool.py  tool_registry.py
app/utils/: __init__.py  conversation_store.py  intent_detector.py
app/workflows/: __init__.py  multi_agentic_workflow.py
